Written the api to handle caches, needs a few more tweaks, just committing as got lazy and didnt commit enough at all whilst writing :(

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "node-example",
-  "version": "0.0.1",
-  "dependencies": {
-    "express": ">=2.2.0"
-  }
+	"name" : "robhuzzey-cachehandler",
+	"version" : "0.0.1",
+	"dependencies" : {
+		"express" : ">=2.2.0",
+		"mongodb": ">= 0.9.6-7"
+	}
 }
