--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
 	"name" : "robhuzzey-cachehandler",
 	"version" : "0.0.2",
-	"engines": {
-		"node": "0.6.x",
-		"npm":  "1.0.x"
+	"engines" : {
+		"node" : "0.6.16",
+		"npm" :  "1.0.9"
 	}
 	"dependencies" : {
 		"express" : ">=2.2.0",
-		"mongodb": ">= 0.9.6-7"
+		"mongodb" : ">= 0.9.6-7"
 	}
 }
